--- a/.tests/Optimization.Linear.Tests/Optimization.Linear.Tests.fsproj
+++ b/.tests/Optimization.Linear.Tests/Optimization.Linear.Tests.fsproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Linear_Tests.fs" />
     <None Include="packages.config" />
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
