--- a/Optimization/Optimization.fsproj
+++ b/Optimization/Optimization.fsproj
@@ -58,9 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <Compile Include="Simplex.fs" />
     <None Include="packages.config" />
     <Compile Include="DualSimplex.fs" />
+    <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Optimization.Utils\Optimization.Utils.fsproj">
