--- a/Optimization/packages.config
+++ b/Optimization/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="FSharpx.Core" version="1.8.41" targetFramework="net45" />
   <package id="FSPowerPack.Core.Community" version="3.0.0.0" targetFramework="net45" />
+  <package id="R.NET" version="1.5.5" targetFramework="net45" />
+  <package id="RDotNet.FSharp" version="0.1.2.1" targetFramework="net45" />
+  <package id="RProvider" version="1.0.5" targetFramework="net45" />
 </packages>
