--- a/Optimization/Optimization.fsproj
+++ b/Optimization/Optimization.fsproj
@@ -60,9 +60,11 @@
   <ItemGroup>
     <Compile Include="Common.fs" />
     <Compile Include="DualSimplex.fs" />
-    <Compile Include="Bellman.fs" />
     <Compile Include="Branches%27nBounds.fs" />
+    <Compile Include="Gomory.fs" />
+    <Compile Include="Bellman.fs" />
     <Compile Include="Branches%27nBounds_Tests.fs" />
+    <Compile Include="Gomory_Tests.fs" />
     <Compile Include="Bellman_Tests.fs" />
     <None Include="packages.config" />
     <None Include="App.config" />
